"ConfigReader" sınıfındaki static blok kaldırıldı. Artık okuma işlemleri "initConfigs()" metodunda yapılıyor